0.03
 - Update copyright years.
 - Rewrite to new PYX::Parser 0.02.

0.02 2014-11-29T09:04:56+01:00
 - Add test for constructor.
 - XXX Move GraphViz.pm in distribution to lib/PYX/GraphViz.pm due
   Module::Install requires command problem with GraphViz.pm, which isn't
   GraphViz module.

0.01 2014-11-26T23:45:00+01:00
 - First version.