@@ -1,6 +1,7 @@
 0.03
  - Update copyright years.
- - Rewrite to new PYX::Parser 0.02.
+ - Rewrite to new PYX::Parser 0.02 (callbacks).
+ - Rewrite to new PYX::Parser 'non_parser_options' parameter.
 
 0.02 2014-11-29T09:04:56+01:00
  - Add test for constructor.
